finance-app-file-storage/devops/kafka/redpanda/redpanda.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redpanda-service
  namespace: queue
spec:
  selector:
    app: redpanda
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8080
