finance-app-file-storage/devops/kafka/redpanda/redpanda.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redpanda-ingress
  namespace: queue
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: redpanda.local.gd
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redpanda-service
                port:
                  number: 8082
